--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
     <script>
       $('.example2 .tweet').twittie({
-        'username': 'iliket0rock',
+        'hashtag': 'DTOpendeurdag',
         'dateFormat': '%d %b. %Y',
           'count': 10,
           'hideReplies': true,
